--- a/main.html
+++ b/main.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+	<title>My task</title>
+</head>
 
 <html>
 
@@ -7,7 +10,7 @@
 
 <body>
 	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	<h1>Hello </h1>
+	<h1>Hello World</h1>
 </body>
 
 </html>
